# Hackathon_2_TODO_Evolution

.github/workflows/: deploy-phase2.yml  deploy-phase3.yml
Phase_1_CLI_Based_App/: .gitignore  CLAUDE.md  main.py  pyproject.toml
Phase_1_CLI_Based_App/src/: __init__.py  models.py  services.py  storage.py  ui.py
Phase_2_Full_Stack_Web_Application/: .gitignore  CLAUDE.md  Dockerfile  README.md  vercel.json
Phase_2_Full_Stack_Web_Application/.claude/: settings.local.json
Phase_2_Full_Stack_Web_Application/backend/: Dockerfile  README.md  alembic.ini  auth_config.py  main.py  pyproject.toml  requirements.txt
Phase_2_Full_Stack_Web_Application/backend/alembic/: env.py
Phase_2_Full_Stack_Web_Application/backend/alembic/versions/: 20251229_001_initial_todos_table_creation.py  20260106_005_add_tags_index.py
Phase_2_Full_Stack_Web_Application/backend/core/: auth_config.py  config.py  database.py
Phase_2_Full_Stack_Web_Application/backend/models/: database_todo.py
Phase_2_Full_Stack_Web_Application/backend/routes/: auth.py
Phase_2_Full_Stack_Web_Application/backend/services/: auth_service.py  oauth_service.py  todo_service.py
Phase_2_Full_Stack_Web_Application/frontend/: .env.example  next.config.ts  package-lock.json  package.json
Phase_3_Todo_AI_Chatbot/: .gitignore
Phase_3_Todo_AI_Chatbot/backend/: .env  .gitignore  Dockerfile  README.md  create_tables.py  database.py  main.py  pyproject.toml  requirements.txt  run_app.py  start_server.py
Phase_3_Todo_AI_Chatbot/docs/: chatbot_api.md
Phase_3_Todo_AI_Chatbot/frontend/: next.config.ts  package.json  (+1 more)
(+215 files in other folders)
